<resources>
    <string name="app_name">Candy App</string>
    <string name="facebook_id" translatable="false">1683017735281219</string>

    <string name="error_connection">No internet connection</string>
    <string name="error_authentication">Authentication error</string>
    <string name="error_unknown">Some error occurred</string>
    <string name="error_internal">Internal server error</string>
    <string name="error_missing_email">Email is required to create account</string>
    <string name="error_token">Incorrect Facebook token</string>
    <string name="error_incorrect_email">Incorrect email</string>
    <string name="error_existing_email">Account with this email already exist</string>
    <string name="error_no_user">Could not find user</string>

    <string name="error_cannot_invite_self">You cannot invite yourself</string>
    <string name="error_already_friend">User was already invited</string>
    <string name="error_not_invited">User was not invited</string>

    <string name="error_list_count_limit">You cannot have so many shopping lists</string>
    <string name="error_list_not_exist">Selected list doesn\'t exist or you are not permitted</string>
    <string name="error_not_permitted">This operation is not permitted</string>

    <string name="error_owner_remove">List owner cannot be removed</string>
    <string name="error_remove_uninvited">You don\'t share list with list</string>
    <string name="error_invite_not_friend">You can share list only with your friends</string>
    <string name="error_remove_self">You cannot remove yourself</string>
    <string name="error_item_count_limit">You cannot have so many shopping lists</string>

    <string name="error_item_not_changed">Changes were not saved</string>
    <string name="error_item_deleted">This item doesn\'t exist</string>

    <string name="no_permissions">No permissions</string>

    <string name="login_welcome">Create shopping lists and share it with you friends</string>
    <string name="login_facebook">Sign in with Facebook</string>
    <string name="login_login_in_progress">Loading in&#8239;</string>
    <string name="login_error_facebook">Some error occurred with Facebook login</string>
    <string name="login_error_api">Incorrect Facebook token or missing permissions</string>
    <string name="login_error_connection">Problems with internet connection</string>

    <string name="profile">Profile</string>
    <string name="profile_logout">Logout"</string>
    <string name="profile_friend_add">Invite new friend</string>
    <string name="profile_friend_email">Email</string>
    <string name="profile_error_email_missing">Enter email</string>
    <string name="profile_error_email_exist">User with this email is invited</string>
    <string name="profile_message_inviting">Sending invitation</string>
    <string name="profile_message_accepting">Accepting invitation</string>
    <string name="profile_message_deleting">Removing user</string>
    <string name="profile_delete_message">Do you want to remove selected friend?</string>
    <string name="profile_accept_message">Do you want to accept or remove invitation?</string>
    <string name="profile_accept">Accept</string>
    <string name="profile_delete">Remove</string>

    <string name="friend_accepted">Friend</string>
    <string name="friend_waiting">Waiting for user acceptance</string>
    <string name="friend_invited">Accept friend invitation</string>

    <string name="shop_no_items">You don\'t have any shopping list. \nCreate new.</string>
    <string name="shop_dialog_creating">Creating new list</string>
    <string name="shop_error_missing_name">Name is required to create shop list</string>
    <string name="shop_error_count_limit">You cannot have so many shopping lists</string>
    <string name="shop_error_list_not_exist">List doesn\'t exist</string>
    <string name="shop_create_shop_title">Create new shopping list</string>
    <string name="shop_create_shop_name">List name</string>

    <string name="detail_no_items">You don\'t have any items. \nAdd new.</string>
    <string name="detail_delete_list">Delete</string>
    <string name="detail_deleting_list">Removing list</string>

    <string name="friend_retry">Retry</string>

    <string name="users_title">List users</string>
    <string name="users_error_remove_owner">Cannot remove owner</string>
    <string name="users_remove_title">Do you want to remove %s from list?</string>
    <string name="users_removing_user">Removing user</string>

    <string name="shop_create_name_hint">Item name</string>
    <string name="shop_create_name_error">Provide item name</string>
    <string name="shop_create_quantity_hint">Quantity</string>
    <string name="shop_create_quantity_error">Provide quantity</string>
    <string-array name="shop_create_quantity_type">
        <item>pieces</item>
        <item>grams</item>
        <item>kilograms</item>
        <item>milliliters</item>
        <item>liters</item>
    </string-array>
    <string name="shop_create_save">Save</string>
    <string name="shop_create_image_error">Something went wrong</string>
</resources>
